--- a/web/assets/scss/layouts/_admin-wrapper.scss
+++ b/web/assets/scss/layouts/_admin-wrapper.scss
@@ -5,5 +5,7 @@
     display: flex;
     align-items: baseline;
     min-height: calc(100vh - 230px);
+    width: 90%;
+    margin: auto;
   }
 }
